[package]
name = "mic-rs"
version = "0.1.0"
edition = "2021"
description = "BLE client for downloading audio from portable voice recorders (Soundcore D3200, Plaud planned)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dariofinardi/mic-rs"
readme = "README.md"

[[bin]]
name = "mike"
path = "src/bin/mike.rs"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = "1"
p256 = { version = "0.13", features = ["ecdh"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.12"
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
